# datafiller

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  PERFORMANCE_RECOMMENDATIONS.md  README.md  comparison.ipynb  pyproject.toml
.github/workflows/: ci-pipeline.yml  pypi.yaml  pytest.yml
benchmark/: benchmark.py
datafiller/: __init__.py  _datafiller.py  _multivariate_imputer.py  _optimask.py  _timeseries_imputer.py  datasets.py
datafiller/datasets/: __init__.py  _misc.py
datafiller/estimators/: __init__.py  elm.py  nonrandom_elm.py  ridge.py
datafiller/multivariate/: __init__.py  _fast_ridge.py  _gpu.py  _numba_utils.py  _scoring.py  _utils.py  elm_imputer.py  imputer.py
datafiller/timeseries/: imputer.py
docs/: algorithm.rst  api.rst  benchmarks.rst  changelog.rst  conf.py  how_to_use.rst  index.rst  performance.rst  requirements.txt
docs/_static/: multivariate_benchmark_results.csv  pems_bay_timeseries_imputation.csv  titanic_head.md  titanic_imputed.csv  titanic_imputed_head.md
docs/_static/performance/: baseline.csv  final-strategy-04.csv  trial-summary.csv
docs/_static/performance/profiles/baseline/: mixed_dataframe_mar.json  mixed_dataframe_mar.txt  numeric_feature_selection.json  numeric_feature_selection.txt  numeric_mar_medium.json  numeric_mar_medium.txt
docs/_static/performance/profiles/final-strategy-04/: mixed_dataframe_mar.json  mixed_dataframe_mar.txt  numeric_feature_selection.json  numeric_feature_selection.txt  numeric_mar_medium.json  numeric_mar_medium.txt
docs/_static/performance/profiles/strategy-03-serial-numba-kernels/: numeric_feature_selection.json  (+3 more)
docs/_static/performance/trials/: strategy-03-serial-numba-kernels.csv  strategy-04-serial-numba-plus-fast-ridge.csv
scripts/: README.md  __init__.py  _multivariate_perf_registry.py  _multivariate_perf_shared.py  generate_pems_timeseries_imputation_csv.py  multivariate_benchmark.py  profile_multivariate.py  render_pems_timeseries_plot.py  render_titanic_tables.py  run_multivariate_benchmarks.py
src/datafiller/: __init__.py  _optimask.py  exceptions.py
src/datafiller/datasets/: _datasets.py  _misc.py
src/datafiller/estimators/: __init__.py  ridge.py
src/datafiller/multivariate/: _numba_utils.py  _polars.py  _utils.py  imputer.py
src/datafiller/timeseries/: _utils.py  imputer.py
tests/: test_datafiller.py  test_datasets.py  test_datasets_misc.py  test_errors.py  test_estimators.py  test_fast_ridge.py  test_gpu.py  test_multivariate.py  test_multivariate_imputer.py  test_multivariate_polars.py  test_optimask.py  test_performance_registry.py  test_pipeline_imputers.py  test_polars.py  test_timeseries.py  test_timeseries_imputer.py  test_timeseries_polars.py  test_timing.py
(+2 files in other folders)
