[build-system]
requires = ["hatchling>=1.12.0"]
build-backend = "hatchling.build"

[project]
name = "datafiller"
version = "0.1.0"
description = "Data imputation"
authors = [
  { name="Cyril Joly"},
]
dependencies = [
    "numpy",
    "numba",
    "scikit-learn",
    "tqdm",
]

[tool.ruff]
line-length = 120
